<resources>
    <string name="app_name">InventoryProject</string>
    <string name="editor_activity_title_new_book">Add a Book</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>
    <string name="category_overview">Overview</string>
    <string name="category_quantity">Quantity</string>
    <string name="unit_book_quantity">Copies</string>
    <string name="category_price">Price</string>
    <string name="unit_book_price">$</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Books</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="hint_title">Title</string>
    <string name="hint_supplier">Supplier</string>
    <string name="hint_phone">Phone</string>
    <string name="empty_view_title_text">No books here so far.</string>
    <string name="empty_view_subtitle_text">Get started by ordering one!</string>
    <string name="editor_insert_book_successful">Book saved</string>
    <string name="editor_insert_book_failed">Error with saving book</string>
    <string name="editor_update_book_successful">Book updated</string>
    <string name="editor_update_book_failed">Error with updating book</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_book_successful">Book deleted</string>
    <string name="editor_delete_book_failed">Error with deleting book</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="unknown_supplier">Unknown Supplier</string>
    <string name="order_button">Order</string>
    <string name="decrease_quantity_button">-</string>
    <string name="increase_quantity_button">+</string>
    <string name="sale_button">Sale</string>
    <string name="check_input">Please check that all fields are populated</string>
    <string name="name_check">Book title is required</string>
    <string name="supplier_check">Book supplier is required</string>
    <string name="price_check">Book price is required</string>
    <string name="quantity_check">Book quantity is required</string>
    <string name="phone_check">Supplier phone is required</string>

</resources>
